--- a/views/base.pug
+++ b/views/base.pug
@@ -6,7 +6,7 @@ html
             meta(name="viewport", content="width=device-width, initial-scale=1.0") 
             link(rel="stylesheet", href="/css/style.css")
             link(rel="shortcut icon", href="/img/favicon.png", type="image/png")
-            link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Lato:300,300i,700")
+            link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Lato:300,300i,700") 
             title Natours | #{title}      
 
     body 
@@ -22,6 +22,7 @@ html
         //- script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js')  
         //- script(src='/js/mapbox.js')
         //- script(src='/js/login.js')
+        script(src='https://js.stripe.com/v3/')
         script(src='/js/bundle.js')
 
 
